--- a/Resources/Private/Language/it.locallang_be.xlf
+++ b/Resources/Private/Language/it.locallang_be.xlf
@@ -35,11 +35,11 @@
 				<source>Newsletter: edit form (part 2)</source>
 				<target>Newsletter: modifica modulo (parte 2)</target>
 			</trans-unit>
-			<trans-unit id="template.subscribeExt" resname="template.subscribeExt">
+			<trans-unit id="template.subscribeExtern" resname="template.subscribeExtern">
 				<source>Newsletter: subscribe via external extension</source>
 				<target>Newsletter: iscrizione via estensione esterna</target>
 			</trans-unit>
-			<trans-unit id="template.verify" resname="template.verify">
+			<trans-unit id="template.subscribeVerify" resname="template.subscribeVerify">
 				<source>Newsletter: verify subscription</source>
 				<target>Newsletter: verifica l&#039;iscrizione</target>
 			</trans-unit>
@@ -55,7 +55,7 @@
 				<source>Newsletter: unsubscribe via Luxletter-link</source>
 				<target>Newsletter: revoca della iscrizione via luxletter-link</target>
 			</trans-unit>
-			<trans-unit id="template.verifyUnsubscribe" resname="template.verifyUnsubscribe">
+			<trans-unit id="template.unsubscribeVerify" resname="template.unsubscribeVerify">
 				<source>Newsletter: verify unsubscription</source>
 				<target>Newsletter: verifica la revoca della iscrizione</target>
 			</trans-unit>
@@ -230,14 +230,6 @@
 			<trans-unit id="dashboard.widget.fixpunktLogStatus.label" resname="dashboard.widget.fixpunktLogStatus.label">
 				<source>Status code, count</source>
 				<target>Numero</target>
-			</trans-unit>
-			<trans-unit id="pagemodule.pageNotAvailable" xml:space="preserve">
-				<source>Page with uid &quot;%s&quot; is not available anymore!</source>
-				<target>Page with uid &quot;%s&quot; is not available anymore!</target>
-			</trans-unit>
-			<trans-unit id="pagemodule.recordNotAvailable" xml:space="preserve">
-				<source>Record with uid "%s" is not available anymore!</source>
-				<source>Record with uid "%s" is not available anymore!</source>
 			</trans-unit>
 		</body>
 	</file>
