--- a/Resources/Private/Language/fr.locallang_be.xlf
+++ b/Resources/Private/Language/fr.locallang_be.xlf
@@ -11,13 +11,9 @@
 				<source>Startingpoint</source>
 				<target>Point de départ</target>
 			</trans-unit>
-			<trans-unit id="template" resname="template">
-				<source>HTML-template:</source>
-				<target>Template HTML:</target>
-			</trans-unit>
-			<trans-unit id="template.not_configured" resname="template.not_configured">
-				<source>no template layout selected!</source>
-				<target>Aucune template sélectionnée!</target>
+			<trans-unit id="recursive" resname="recursive">
+				<source>recursive</source>
+				<target>recursive</target>
 			</trans-unit>
 			<trans-unit id="template.new" resname="template.new">
 				<source>Newsletter: subscribe (and unsubscribe)</source>
@@ -27,7 +23,7 @@
 				<source>Newsletter: only a cacheable subscribe form</source>
 				<target>Infolettre: seulement un formulaire d&#039;inscription pouvant être mis en cache</target>
 			</trans-unit>
-			<trans-unit id="template.editEmail" resname="template.editEmail">
+			<trans-unit id="template.editemail" resname="template.editemail">
 				<source>Newsletter: request edit email (part 1)</source>
 				<target>Newsletter : demande de modification de l&#039;e-mail (partie 1)</target>
 			</trans-unit>
@@ -35,11 +31,11 @@
 				<source>Newsletter: edit form (part 2)</source>
 				<target>Infolettre: modifier le formulaire (partie 2)</target>
 			</trans-unit>
-			<trans-unit id="template.subscribeExtern" resname="template.subscribeExtern">
+			<trans-unit id="template.subscribeext" resname="template.subscribeext">
 				<source>Newsletter: subscribe via external extension</source>
 				<target>Infolettre: inscription via une extension tierce</target>
 			</trans-unit>
-			<trans-unit id="template.subscribeVerify" resname="template.subscribeVerify">
+			<trans-unit id="template.verify" resname="template.verify">
 				<source>Newsletter: verify subscription</source>
 				<target>Infolettre: Validation de l&#039;inscription</target>
 			</trans-unit>
@@ -47,15 +43,15 @@
 				<source>Newsletter: unsubscribe via form</source>
 				<target>Infolettre: Formulaire de désinscription</target>
 			</trans-unit>
-			<trans-unit id="template.unsubscribeDM" resname="template.unsubscribeDM">
+			<trans-unit id="template.unsubscribedm" resname="template.unsubscribedm">
 				<source>Newsletter: unsubscribe via direct_mail-link</source>
 				<target>Infolettre: Désinscription via un direct_mail-lien</target>
 			</trans-unit>
-			<trans-unit id="template.unsubscribeLux" resname="template.unsubscribeLux">
+			<trans-unit id="template.unsubscribelux" resname="template.unsubscribelux">
 				<source>Newsletter: unsubscribe via Luxletter-link</source>
 				<target>Infolettre: Désinscription via un Luxletter-lien</target>
 			</trans-unit>
-			<trans-unit id="template.unsubscribeVerify" resname="template.unsubscribeVerify">
+			<trans-unit id="template.verifyunsubscribe" resname="template.verifyunsubscribe">
 				<source>Newsletter: verify unsubscription</source>
 				<target>Infolettre: Validation de la désinscription</target>
 			</trans-unit>
@@ -230,6 +226,14 @@
 			<trans-unit id="dashboard.widget.fixpunktLogStatus.label" resname="dashboard.widget.fixpunktLogStatus.label">
 				<source>Status code, count</source>
 				<target>Number</target>
+			</trans-unit>
+			<trans-unit id="pagemodule.pageNotAvailable" xml:space="preserve">
+				<source>Page with uid &quot;%s&quot; is not available anymore!</source>
+				<target>Page with uid &quot;%s&quot; is not available anymore!</target>
+			</trans-unit>
+			<trans-unit id="pagemodule.recordNotAvailable" xml:space="preserve">
+				<source>Record with uid "%s" is not available anymore!</source>
+				<source>Record with uid "%s" is not available anymore!</source>
 			</trans-unit>
 		</body>
 	</file>
