--- a/Resources/Private/Language/locallang_be.xlf
+++ b/Resources/Private/Language/locallang_be.xlf
@@ -9,11 +9,8 @@
 			<trans-unit id="startingPoint" resname="startingPoint">
 				<source>Startingpoint</source>
 			</trans-unit>
-			<trans-unit id="template" resname="template">
-				<source>HTML-template:</source>
-			</trans-unit>
-			<trans-unit id="template.not_configured" resname="template.not_configured">
-				<source>no template layout selected!</source>
+			<trans-unit id="recursive" resname="recursive">
+				<source>recursive</source>
 			</trans-unit>
 			<trans-unit id="template.new" resname="template.new">
 				<source>Newsletter: subscribe (and unsubscribe)</source>
@@ -21,28 +18,28 @@
 			<trans-unit id="template.form" resname="template.form">
 				<source>Newsletter: only a cacheable subscribe form</source>
 			</trans-unit>
-			<trans-unit id="template.editEmail" resname="template.editEmail">
+			<trans-unit id="template.editemail" resname="template.editemail">
 				<source>Newsletter: request edit email (part 1)</source>
 			</trans-unit>
 			<trans-unit id="template.edit" resname="template.edit">
 				<source>Newsletter: edit form (part 2)</source>
 			</trans-unit>
-			<trans-unit id="template.subscribeExtern" resname="template.subscribeExtern">
+			<trans-unit id="template.subscribeext" resname="template.subscribeext">
 				<source>Newsletter: subscribe via external extension</source>
 			</trans-unit>
-			<trans-unit id="template.subscribeVerify" resname="template.subscribeVerify">
+			<trans-unit id="template.verify" resname="template.verify">
 				<source>Newsletter: verify subscription</source>
 			</trans-unit>
 			<trans-unit id="template.unsubscribe" resname="template.unsubscribe">
 				<source>Newsletter: unsubscribe via form</source>
 			</trans-unit>
-			<trans-unit id="template.unsubscribeDM" resname="template.unsubscribeDM">
+			<trans-unit id="template.unsubscribedm" resname="template.unsubscribedm">
 				<source>Newsletter: unsubscribe via direct_mail-link</source>
 			</trans-unit>
-			<trans-unit id="template.unsubscribeLux" resname="template.unsubscribeLux">
+			<trans-unit id="template.unsubscribelux" resname="template.unsubscribelux">
 				<source>Newsletter: unsubscribe via Luxletter-link</source>
 			</trans-unit>
-			<trans-unit id="template.unsubscribeVerify" resname="template.unsubscribeVerify">
+			<trans-unit id="template.verifyunsubscribe" resname="template.verifyunsubscribe">
 				<source>Newsletter: verify unsubscription</source>
 			</trans-unit>
 			<trans-unit id="template.resend" resname="template.resend">
@@ -173,6 +170,12 @@
 			</trans-unit>
 			<trans-unit id="dashboard.widget.fixpunktLogStatus.label" resname="dashboard.widget.fixpunktLogStatus.label">
 				<source>Status code, count</source>
+			</trans-unit>
+			<trans-unit id="pagemodule.pageNotAvailable" xml:space="preserve">
+				<source>Page with uid &quot;%s&quot; is not available anymore!</source>
+			</trans-unit>
+			<trans-unit id="pagemodule.recordNotAvailable" xml:space="preserve">
+				<source>Record with uid "%s" is not available anymore!</source>
 			</trans-unit>
 		</body>
 	</file>
