--- a/Resources/Private/Language/fr.locallang_be.xlf
+++ b/Resources/Private/Language/fr.locallang_be.xlf
@@ -25,11 +25,11 @@
 			</trans-unit>
 			<trans-unit id="template.editemail" resname="template.editemail">
 				<source>Newsletter: request edit email (part 1)</source>
-				<target>Newsletter : demande de modification de l&#039;e-mail (partie 1)</target>
+				<target>Newsletter: demande de modification de l&#039;e-mail (partie 1)</target>
 			</trans-unit>
 			<trans-unit id="template.edit" resname="template.edit">
-				<source>Newsletter: edit form (part 2)</source>
-				<target>Infolettre: modifier le formulaire (partie 2)</target>
+				<source>Newsletter: edit form (part 1 and 2)</source>
+				<target>Infolettre: modifier le formulaire (partie 1 et 2)</target>
 			</trans-unit>
 			<trans-unit id="template.subscribeext" resname="template.subscribeext">
 				<source>Newsletter: subscribe via external extension</source>
