--- a/Resources/Private/Language/it.locallang_be.xlf
+++ b/Resources/Private/Language/it.locallang_be.xlf
@@ -28,8 +28,8 @@
 				<target>Newsletter: richiesta modifica email (parte 1)</target>
 			</trans-unit>
 			<trans-unit id="template.edit" resname="template.edit">
-				<source>Newsletter: edit form (part 2)</source>
-				<target>Newsletter: modifica modulo (parte 2)</target>
+				<source>Newsletter: edit form (part 1 and 2)</source>
+				<target>Newsletter: modifica modulo (parte 1 e 2)</target>
 			</trans-unit>
 			<trans-unit id="template.subscribeext" resname="template.subscribeext">
 				<source>Newsletter: subscribe via external extension</source>
