--- a/Resources/Private/Language/locallang_be.xlf
+++ b/Resources/Private/Language/locallang_be.xlf
@@ -22,7 +22,7 @@
 				<source>Newsletter: request edit email (part 1)</source>
 			</trans-unit>
 			<trans-unit id="template.edit" resname="template.edit">
-				<source>Newsletter: edit form (part 2)</source>
+				<source>Newsletter: edit form (part 1 and 2)</source>
 			</trans-unit>
 			<trans-unit id="template.subscribeext" resname="template.subscribeext">
 				<source>Newsletter: subscribe via external extension</source>
