--- a/Resources/Private/Language/de.locallang.xlf
+++ b/Resources/Private/Language/de.locallang.xlf
@@ -307,9 +307,9 @@
 				<source>Error: the extension tt_address is required if you use settings.table=tt_address!</source>
 				<target>Fehler: die Extension tt_address wird benötigt, wenn settings.table=tt_address gesetzt ist!</target>
 			</trans-unit>
-			<trans-unit id="missing_direct_mail" resname="missing_direct_mail">
-				<source>Error: the extension direct_mail is required if settings.module_sys_dmail_html!=-1 or settings.module_sys_dmail_category is set!</source>
-				<target>Fehler: die Extension direct_mail wird benötigt, wenn settings.module_sys_dmail_html=!-1 oder settings.module_sys_dmail_category gesetzt ist!</target>
+			<trans-unit id="missing_mail" resname="missing_mail">
+				<source>Error: the extension mail is required if settings.html!=-1 or settings.categoryOrGroup is set!</source>
+				<target>Fehler: die Extension mail wird benötigt, wenn settings.html=!-1 oder settings.categoryOrGroup gesetzt ist!</target>
 			</trans-unit>
 			<trans-unit id="email.dear-gender-first-and-last-name" resname="email.dear-gender-first-and-last-name">
 				<source>Dear %s %s %s,</source>
