--- a/Resources/Private/Language/it.locallang.xlf
+++ b/Resources/Private/Language/it.locallang.xlf
@@ -307,9 +307,9 @@
 				<source>Error: the extension tt_address is required if you use settings.table=tt_address!</source>
 				<target>Errore: l&#039;estensione tt_address è richiesta se si utilizza settings.table=tt_address!</target>
 			</trans-unit>
-			<trans-unit id="missing_direct_mail" resname="missing_direct_mail">
-				<source>Error: the extension direct_mail is required if settings.module_sys_dmail_html!=-1 or settings.module_sys_dmail_category is set!</source>
-				<target>Errore: l&#039;estensione direct_mail è richiesta se è impostato settings.module_sys_dmail_html!=-1 o settings.module_sys_dmail_category!</target>
+			<trans-unit id="missing_mail" resname="missing_mail">
+				<source>Error: the extension direct_mail is required if settings.html!=-1 or settings.categoryOrGroup is set!</source>
+				<target>Errore: l&#039;estensione mail è richiesta se è impostato settings.html!=-1 o settings.categoryOrGroup!</target>
 			</trans-unit>
 			<trans-unit id="email.dear-gender-first-and-last-name" resname="email.dear-gender-first-and-last-name">
 				<source>Dear %s %s %s,</source>
