--- a/Resources/Private/Language/it.locallang_be.xlf
+++ b/Resources/Private/Language/it.locallang_be.xlf
@@ -43,10 +43,6 @@
 				<source>Newsletter: unsubscribe via form</source>
 				<target>Newsletter: revoca della iscrizione via form</target>
 			</trans-unit>
-			<trans-unit id="template.unsubscribedm" resname="template.unsubscribedm">
-				<source>Newsletter: unsubscribe via direct_mail-link</source>
-				<target>Newsletter: revoca della iscrizione via direct_mail-link</target>
-			</trans-unit>
 			<trans-unit id="template.unsubscribelux" resname="template.unsubscribelux">
 				<source>Newsletter: unsubscribe via Luxletter-link</source>
 				<target>Newsletter: revoca della iscrizione via luxletter-link</target>
@@ -183,17 +179,17 @@
 				<source>Add language UID to email templates?</source>
 				<target>Aggiungere l&#039;UID della lingua ai modelli di posta elettronica?</target>
 			</trans-unit>
-			<trans-unit id="settings.dmUnsubscribeMode" resname="settings.dmUnsubscribeMode">
-				<source>Direct mail unsubscribe mode: direct unsubscribe (no) or go to the unsubscribe page (yes)?</source>
-				<target>Direct mail modalità di annullamento dell&#039;iscrizione: disiscrizione diretta (no) o vai alla pagina di annullamento dell&#039;iscrizione (si)?</target>
+			<trans-unit id="settings.unsubscribeMode" resname="settings.unsubscribeMode">
+				<source>Luxletter unsubscribe mode: direct unsubscribe (no) or go to the unsubscribe page (yes)?</source>
+				<target>Luxletter modalità di annullamento dell&#039;iscrizione: disiscrizione diretta (no) o vai alla pagina di annullamento dell&#039;iscrizione (si)?</target>
 			</trans-unit>
-			<trans-unit id="settings.module_sys_dmail_html" resname="settings.module_sys_dmail_html">
-				<source>Subscribe to a HTML-newsletter?</source>
+			<trans-unit id="settings.html" resname="settings.html">
+				<source>Subscribe to an HTML-newsletter?</source>
 				<target>Iscrizione alla newsletter in formato HTML?</target>
 			</trans-unit>
-			<trans-unit id="settings.module_sys_dmail_category" resname="settings.module_sys_dmail_category">
-				<source>UIDs of the direct-mail-categories (direct-mail) OR fe_groups (luxletter), e.g. 3,4</source>
-				<target>UID di module_sys_dmail_category (direct-mail) O fe_groups (luxletter)</target>
+			<trans-unit id="settings.categoryOrGroup" resname="settings.categoryOrGroup">
+				<source>UIDs of the categories (mail) OR fe_groups (luxletter), e.g. 3,4</source>
+				<target>UID di sys_category (mail) O fe_groups (luxletter)</target>
 			</trans-unit>
 			<trans-unit id="parameters" resname="parameters">
 				<source>External parameters</source>
