--- a/Resources/Private/Language/de.locallang_db.xlf
+++ b/Resources/Private/Language/de.locallang_db.xlf
@@ -8,7 +8,7 @@
 				<target>Newsletter-Abonnenten-Management</target>
 			</trans-unit>
 			<trans-unit id="tx_fp_newsletter_domain_model_pi1.description" resname="tx_fp_newsletter_domain_model_pi1.description">
-				<source>Privacy compliant plugin for newsletter subscription and unsubscription (for direct_mail via tt_address/luxletter via fe_users).</source>
+				<source>Privacy compliant plugin for newsletter subscription and unsubscription (for mail via tt_address/luxletter via fe_users).</source>
 				<target>Datenschutzkonformes Plugin für NL-An- und Abmeldungen via tt_address oder fe_users.</target>
 			</trans-unit>
 			<trans-unit id="tx_fpnewsletter_domain_model_log" resname="tx_fpnewsletter_domain_model_log">
