--- a/Resources/Private/Language/fr.locallang.xlf
+++ b/Resources/Private/Language/fr.locallang.xlf
@@ -308,7 +308,7 @@
 				<target>Erreur: l&#039;extension tt_address est requise si vous utilisez le paramètre. table=tt_address!</target>
 			</trans-unit>
 			<trans-unit id="missing_mail" resname="missing_mail">
-				<source>Error: the extension direct_mail is required if settings.html!=-1 or settings.categoryOrGroup is set!</source>
+				<source>Error: the extension mail is required if settings.html!=-1 or settings.categoryOrGroup is set!</source>
 				<target>Erreur: l&#039;extension mail est requise si settings.html!=-1 ou settings.categoryOrGroup est défini!</target>
 			</trans-unit>
 			<trans-unit id="email.dear-gender-first-and-last-name" resname="email.dear-gender-first-and-last-name">
