--- a/Resources/Private/Language/it.locallang_be.xlf
+++ b/Resources/Private/Language/it.locallang_be.xlf
@@ -47,6 +47,10 @@
 				<source>Newsletter: unsubscribe via Luxletter-link</source>
 				<target>Newsletter: revoca della iscrizione via luxletter-link</target>
 			</trans-unit>
+			<trans-unit id="template.unsubscribemail" resname="template.unsubscribemail">
+				<source>Newsletter: unsubscribe via mail-link</source>
+				<target>Newsletter: revoca della iscrizione via mail-link</target>
+			</trans-unit>
 			<trans-unit id="template.verifyunsubscribe" resname="template.verifyunsubscribe">
 				<source>Newsletter: verify unsubscription</source>
 				<target>Newsletter: verifica la revoca della iscrizione</target>
