--- a/Resources/Private/Language/locallang_be.xlf
+++ b/Resources/Private/Language/locallang_be.xlf
@@ -118,13 +118,16 @@
 				<source>Hard or soft delete mode?</source>
 			</trans-unit>
 			<trans-unit id="settings.deleteMode.1" resname="settings.deleteMode.1">
-				<source>set deletion flag</source>
+				<source>set deleted flag</source>
 			</trans-unit>
 			<trans-unit id="settings.deleteMode.2" resname="settings.deleteMode.2">
 				<source>delete entry</source>
 			</trans-unit>
 			<trans-unit id="settings.deleteMode.3" resname="settings.deleteMode.3">
 				<source>delete only categories (mail) or user-group (luxletter)</source>
+			</trans-unit>
+			<trans-unit id="settings.deleteMode.4" resname="settings.deleteMode.4">
+				<source>set hidden flag</source>
 			</trans-unit>
 			<trans-unit id="settings.languageMode" resname="settings.languageMode">
 				<source>Language mode</source>
