--- a/Resources/Private/Language/fr.locallang_be.xlf
+++ b/Resources/Private/Language/fr.locallang_be.xlf
@@ -167,6 +167,10 @@
 				<source>delete only cat/group</source>
 				<target>Supprimer uniquement les catégories (Mail) ou le groupe d'utilisateurs (Luxletter)</target>
 			</trans-unit>
+			<trans-unit id="settings.deleteMode.4" resname="settings.deleteMode.4">
+				<source>set hidden flag</source>
+				<target>Utilisation du champs hidden</target>
+			</trans-unit>
 			<trans-unit id="settings.languageMode" resname="settings.languageMode">
 				<source>Language mode</source>
 				<target>Mode de localisation</target>
