--- a/Resources/Private/Language/fr.locallang_be.xlf
+++ b/Resources/Private/Language/fr.locallang_be.xlf
@@ -199,6 +199,14 @@
 				<source>UIDs of the categories (mail) OR fe_groups (luxletter), e.g. 3,4</source>
 				<target>UID de sys_category (mail) OU fe_groups (luxletter)</target>
 			</trans-unit>
+			<trans-unit id="settings.newsletterExtension" resname="settings.newsletterExtension">
+				<source>Used newsletter extension</source>
+				<target>Extension de newsletter utilisée</target>
+			</trans-unit>
+			<trans-unit id="settings.other" resname="settings.other">
+				<source>other</source>
+				<target>autre (html sera défini sur -1)</target>
+			</trans-unit>
 			<trans-unit id="parameters" resname="parameters">
 				<source>External parameters</source>
 				<target>Paramètres externes</target>
